[package]
name = "postgres-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
hex = "0.4.3"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
websocket = "0.26.5"
