[package]
name = "postgres-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21"
futures-util = "0.3.28"
hex = "0.4.3"
wasm-rs-async-executor = "0.9.0"
ws_stream_wasm = "0.7.4"
